Revert scaling changes, fixes clipping bug

--- a/overlay.css
+++ b/overlay.css
@@ -1,13 +1,11 @@
 #streamer_overlay {
-    display: flex;
+    display: inline-flex;
     visibility: visible;
+    position: relative;
 
-    justify-content: center;
+    align-self: flex-start;
 
-    margin: 0.25em;
-
-    width: 100vw;
-    max-width: 100vw;
+    margin: 0.5em auto;
 
     font-family: sans-serif;
     text-align: center;
@@ -15,14 +13,12 @@
 }
 
 #streamer_overlay_vars {
-    display: flex;
+    display: inline-flex;
 
-    justify-content: center;
+    justify-content: space-between;
 
     padding: 0.5em;
     padding-top: 0.5em;
-
-    max-width: 95%;
 
     background-color: #00000090;
     border-radius: 8px;
@@ -32,12 +28,11 @@
 .streamer_overlay_item {
     display: none;
 
-    justify-items: space-between;
-    overflow-x: hidden;
+    justify-content: center;
 
     margin-left: 0.2em;
     margin-right: 0.2em;
-    padding: 0.3em;
+    padding: 0.25em;
 
     background-color: #00000090;
     border: 2px solid #a0a0a0ff;
